<?xml version="1.0"?>
<package>
  
  <name>stt_tool_benchmark</name>
  <version>2.0.0</version>
  <description>benchmark and tools for testing semantic translation tool</description>
  <license>Apache 2.0</license>
  <maintainer email="paq@ipa.fhg.de"></maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
